force-app/main/default/objects/Quote__c/fields/AgreementValueWithGst__c.field-meta.xml
<CustomField>
    <fullName>AgreementValueWithGst__c</fullName>
    <label>Agreement Value with GST(₹)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>