force-app/main/default/objects/Quote__c/fields/AllInclusivePrice__c.field-meta.xml
<CustomField>
    <fullName>AllInclusivePrice__c</fullName>
    <label>All Inclusive Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>