force-app/main/default/objects/Quote__c/fields/Base_Price_Per_Sq_Yard__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Per_Sq_Yard__c</fullName>
    <label>Base Price Per Sq Yard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>