force-app/main/default/objects/Quote__c/fields/Corpus_Fund_and_Club_House_Payable__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Fund_and_Club_House_Payable__c</fullName>
    <label>Corpus Fund and Club House Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>