force-app/main/default/objects/Quote__c/fields/East__c.field-meta.xml
<CustomField>
    <fullName>East__c</fullName>
    <label>East</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>