force-app/main/default/objects/Quote__c/fields/Final_100_Ft_Road_Plots__c.field-meta.xml
<CustomField>
    <fullName>Final_100_Ft_Road_Plots__c</fullName>
    <formula>Plot__r.Plot_Size__c *  X100_Ft_Road_Plots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final 100 Ft Road Plots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>