force-app/main/default/objects/Quote__c/fields/Final_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Base_Price__c</fullName>
    <formula>Plot__r.Plot_Size__c *  Base_Price_Per_Sq_Yard__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>