force-app/main/default/objects/Quote__c/fields/Final_East__c.field-meta.xml
<CustomField>
    <fullName>Final_East__c</fullName>
    <formula>Plot__r.Plot_Size__c  *  East__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final East</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>