force-app/main/default/objects/Quote__c/fields/Final_Other_Corners__c.field-meta.xml
<CustomField>
    <fullName>Final_Other_Corners__c</fullName>
    <formula>Plot__r.Plot_Size__c  *  Other_Corners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Other Corners</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>