force-app/main/default/objects/Quote__c/fields/Final_Preimum_Plots__c.field-meta.xml
<CustomField>
    <fullName>Final_Preimum_Plots__c</fullName>
    <formula>Plot__r.Plot_Size__c  *  Premium_Plots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Preimum Plots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>