force-app/main/default/objects/Quote__c/fields/Final_Price_for_North_East__c.field-meta.xml
<CustomField>
    <fullName>Final_Price_for_North_East__c</fullName>
    <formula>Plot__r.Plot_Size__c  *  Price_For_North_East__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Price for North East</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>