force-app/main/default/objects/Quote__c/fields/Is_Final__c.field-meta.xml
<CustomField>
    <fullName>Is_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final</label>
    <type>Checkbox</type>
</CustomField>