force-app/main/default/objects/Quote__c/fields/Is_Sales_Head_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Head_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sales Head Approval Required</label>
    <type>Checkbox</type>
</CustomField>