force-app/main/default/objects/Quote__c/fields/IsQuoteGenerated__c.field-meta.xml
<CustomField>
    <fullName>IsQuoteGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQuoteGenerated</label>
    <type>Checkbox</type>
</CustomField>