force-app/main/default/objects/Quote__c/fields/Other_Corners__c.field-meta.xml
<CustomField>
    <fullName>Other_Corners__c</fullName>
    <label>Other Corners</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>