force-app/main/default/objects/Quote__c/fields/Plot__c.field-meta.xml
<CustomField>
    <fullName>Plot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>