force-app/main/default/objects/Quote__c/fields/Plot_Saleable_Area_In_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Plot_Saleable_Area_In_Sqm__c</fullName>
    <label>Plot Saleable Area (In Sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>