force-app/main/default/objects/Quote__c/fields/Premium_Plots__c.field-meta.xml
<CustomField>
    <fullName>Premium_Plots__c</fullName>
    <label>Premium Plots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>