force-app/main/default/objects/Quote__c/fields/Price_For_North_East__c.field-meta.xml
<CustomField>
    <fullName>Price_For_North_East__c</fullName>
    <label>Price For North East</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>