force-app/main/default/objects/Quote__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <formula>Name +  &apos; : &apos; +
Plot__r.Name + &apos; - &apos; +
TEXT(Lead__r.Salutation)  + &apos; &apos; +
Lead__r.FirstName + &apos; &apos; +
Lead__r.MiddleName + &apos; &apos; +
Lead__r.LastName</formula>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>