force-app/main/default/objects/Quote__c/fields/Rate_Per_Sq_Yd__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Sq_Yd__c</fullName>
    <label>Rate Per Sq. Yd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>