force-app/main/default/objects/Quote__c/fields/Time_To_Pay_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Pay_In_Days__c</fullName>
    <label>Time To Pay In Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>