force-app/main/default/objects/Quote__c/fields/Total_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Charges__c</fullName>
    <formula>Final_Price_for_North_East__c + Final_Other_Corners__c + Final_East__c + Final_100_Ft_Road_Plots__c + Final_Preimum_Plots__c + Legal_And_Documentation_Charges__c + Registration_Charges__c + Corpus_Fund_and_Club_House_Payable__c + (Corpus_Fund_and_Club_House_Payable__c * 18/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>