force-app/main/default/objects/Quote__c/fields/Total_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Value__c</fullName>
    <formula>Total_Unit_Cost__c +  Legal_And_Documentation_Charges__c +  Registration_Charges__c +  Corpus_Fund_and_Club_House_Payable__c + (Corpus_Fund_and_Club_House_Payable__c * 18/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>