force-app/main/default/objects/Quote__c/fields/Total_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Cost__c</fullName>
    <formula>Final_Base_Price__c +  Final_Price_for_North_East__c +  Final_Other_Corners__c +  Final_East__c +  Final_100_Ft_Road_Plots__c +  Final_Preimum_Plots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>