force-app/main/default/objects/Quote__c/fields/X100_Ft_Road_Plots__c.field-meta.xml
<CustomField>
    <fullName>X100_Ft_Road_Plots__c</fullName>
    <label>100 Ft Road Plots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>